update README and simplify Cargo.toml

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,4 +19,6 @@ jobs:
     - name: Run tests
       run: cargo test --verbose
     - name: Run Clippy
-      run: cargo clippy
+      run: cargo clippy --verbose
+    - name: Format
+      run: cargo fmt --verbose -- --check
