--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,14 @@
-name: rust
+name: main
 
 on:
   push:
-    branches: [ master ]
+    paths-ignore:
+      - "docs/**"
+      - "**.md"
   pull_request:
-    branches: [ master ]
+    paths-ignore:
+      - "docs/**"
+      - "**.md"
 
 env:
   CARGO_TERM_COLOR: always
