--- a/qbar-web/Cargo.toml
+++ b/qbar-web/Cargo.toml
@@ -10,7 +10,7 @@ publish = false
 crate-type = ["cdylib"]
 
 [dependencies]
-qbar-core = { path = "../qbar-core" }
+qbar = { path = "../qbar" }
 yew = "0.17"
 wasm-bindgen = "0.2"
 wee_alloc = "0.4.5"
