--- a/qbar-web/Cargo.toml
+++ b/qbar-web/Cargo.toml
@@ -10,6 +10,6 @@ publish = false
 crate-type = ["cdylib"]
 
 [dependencies]
-qbar = { path = "../qbar", features = ["web"] }
+qbar = { path = "../qbar", features = ["shell", "web"] }
 wasm-bindgen = "0.2"
 wee_alloc = "0.4.5"
