--- a/tools/vscode/package.json
+++ b/tools/vscode/package.json
@@ -2,7 +2,7 @@
     "name": "qbar",
     "displayName": "qbar",
     "description": "the rational proof assistant",
-    "icon": "assets/icon.png",
+    "icon": "assets/logo.png",
     "author": "Brandon H. Gomes",
     "publisher": "bhgomes",
     "version": "0.0.1",
@@ -15,9 +15,6 @@
     },
     "categories": [
         "Programming Languages"
-    ],
-    "activationEvents": [
-        "onLanguage:qbar"
     ],
     "contributes": {
         "languages": [
@@ -55,7 +52,7 @@
         "ts-loader": "^8.0.14",
         "ts-standard": "^10.0.0",
         "typescript": "^4.1.3",
-        "vsce": "^1.84.0",
+        "vsce": "^1.85.0",
         "webpack": "^5.18.0",
         "webpack-cli": "^4.4.0"
     },
@@ -65,7 +62,8 @@
         "vscode:prepublish": "npm run fix && webpack --mode production",
         "package": "vsce package -o qbar.vsix",
         "webpack": "webpack --mode development",
-        "webpack-dev": "webpack --mode development --watch"
+        "webpack-dev": "webpack --mode development --watch",
+        "clean": "rm -rf dist && rm -rf node_modules && rm package-lock.json && rm qbar.vsix"
     },
     "ts-standard": {
         "project": "./tsconfig.json"
